1. remove caching 2. add exit from simple queue 3. add more checking 4. code refactoring
